Alignement fixes on mobile layouts

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -82,6 +82,10 @@
 			}
 		}
 
+		&.sender {
+			margin-top: 1em;
+		}
+
 		&.disabled,
 		&:disabled {
 			cursor: default;
